# struccdb

./: Cargo.toml  README.md
struccdb_client/: Cargo.toml  build.rs
struccdb_client/examples/: basic.rs
struccdb_client/src/: lib.rs  main.rs
struccdb_server/: Cargo.toml  build.rs
struccdb_server/proto/: db.proto  test.proto
struccdb_server/src/: main.rs
