[package]
name = "struccdb_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1.51.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"

[build-dependencies]
tonic-prost-build = "0.14"
